...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/horizontal_guideline_end_space" />

    <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/password"
            app:layout_constraintEnd_toStartOf="@+id/vertical_guideline_end"
            app:layout_constraintStart_toStartOf="@+id/vertical_guideline_begin"/>

    <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
...
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/signIn"
            app:layout_constraintEnd_toStartOf="@+id/vertical_guideline_end"
            app:layout_constraintStart_toStartOf="@+id/vertical_guideline_begin"/>

    <Button
            android:id="@+id/signIn"
            android:layout_width="0dp"
...
